使用编辑器新增成功

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,45 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.8</version>
 		</dependency>
+        <dependency>
+         <groupId>org.json</groupId>
+         <artifactId>json</artifactId>
+          <version>20160810</version>
+      </dependency>
+
 		<!-- json end -->
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<dependency>
+    <groupId>commons-fileupload</groupId>
+    <artifactId>commons-fileupload</artifactId>
+    <version>1.3</version>
+</dependency>
+		 <!-- 上传插件 -->
+    <dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.2</version>
+	</dependency>
+	<dependency>
+       <groupId>org.apache.solr</groupId>
+       <artifactId>solr-solrj</artifactId>
+       <version>5.5.2</version>
+    </dependency>
+	   <dependency>
+    	<groupId>commons-codec</groupId>
+    	<artifactId>commons-codec</artifactId>
+    	<version>1.10</version>
+    </dependency>
+     <dependency>
+    	<groupId>org.apache.tomcat.embed</groupId>
+    	<artifactId>tomcat-embed-jasper</artifactId>
+    	<scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>jstl</artifactId>
+    	<scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>  
       <plugins>  
