--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,8 @@ eureka:
   instance:
     preferIpAddress: true
     statusPageUrlPath: /info.html
+    metadata-map:
+      cluster: MAIN
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
