--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 		<artifactId>spring-cloud-starter-ribbon</artifactId>
 	</dependency>
 	<!-- sleuth依赖 -->
-	<!-- <dependency>
+	 <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-sleuth</artifactId>
      </dependency>
@@ -73,7 +73,7 @@
       <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-sleuth-stream</artifactId>
-     </dependency> -->
+     </dependency> 
       	<!-- json start -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
